<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginActivity">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gridLayout"
        android:layout_marginBottom="113dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <EditText
            android:layout_width="269dp"
            android:layout_height="wrap_content"
            android:id="@+id/usernameText"
            android:layout_row="1"
            android:layout_column="0"
            android:hint="@string/UsernameText"
            android:inputType="textPersonName" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="21dp"
            android:layout_row="0"
            android:layout_column="0" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordText"
            android:layout_row="2"
            android:layout_column="0"
            android:hint="@string/PasswordText" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_row="3"
            android:layout_column="0" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SignInButton"
            android:id="@+id/signInButton"
            android:layout_row="4"
            android:layout_column="0"
            android:clickable="false"
            android:onClick="loginButtonClicked" />

    </GridLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/gridLayout"
        android:background="#ffededed"
        android:src="@mipmap/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RegisterAccountLink"
        android:id="@+id/registerAccountLink"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="53dp"
        android:linksClickable="true"
        android:onClick="@string/title_activity_register_account"
        android:nestedScrollingEnabled="true"
        android:autoText="false"
        android:textColor="#ff4249ff"
        android:textIsSelectable="true" />

</RelativeLayout>
